--- a/index.html
+++ b/index.html
@@ -95,12 +95,15 @@
                 <div class="col-12">
                     <div class="main-about">
 
-                        <h4>About Me</h4>
+                        <div class="container">
+                            <h4>About Me</h4>
 
-                        <span>
-                            I am a 21 years old Computer Science student. I am interested in Web Development ,
-                            Networking and Cybersecurity.
-                        </span>
+                            <span>
+                                I am a 21 years old Computer Science student. I am interested in Web Development ,
+                                Networking and Cybersecurity.
+                            </span>
+                        </div>
+                      
 
                     </div>
                 </div>
