--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anarshtein</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="/img/cy.jpg">
     <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -23,7 +24,7 @@
 
                 <div class="col-12">
                     <div class="main-photo">
-                        <img class="img-fluid" src="img/;23.png" alt="">
+                        <img class="img-fluid" src="img/l_new.png" alt="Logo">
                     </div>
                 </div>
 
@@ -95,13 +96,20 @@
                 <div class="col-12">
                     <div class="main-about">
 
-                        <div class="container">
+                        <div class="container40">
                             <h4>About Me</h4>
 
                             <span>
-                                I am a 21 years old Computer Science student. I am interested in Web Development ,
-                                Networking and Cybersecurity.
+                                I am a 21 years old Computer Science student. 
                             </span>
+
+                            <h4>
+                                Interests
+                            </h4>
+
+                            <span>I am interested in Web Development ,
+                                Networking and Cybersecurity.</span>
+                                
                         </div>
                       
 
